--- a/Projects/freeCodeCamp/responsive-web-design/certificationProjects/tribute-page/style.css
+++ b/Projects/freeCodeCamp/responsive-web-design/certificationProjects/tribute-page/style.css
@@ -1,27 +1,53 @@
-#main{
-    display: flex;
-    flex-direction: column;
-    font-family:Georgia, 'Times New Roman', Times, serif;
-    background-color: #778da9;
+body {
+  margin: 0px;
 }
-header{
-    display: flex;
-    flex-direction: column;
-    align-items:center;
+#main {
+  display: flex;
+  flex-direction: column;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  background-color: #141414;
+  color: azure;
 }
-#img-div{
+header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+#img-div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #1f1f1f;
+  margin: auto 0.8rem;
+}
+#image {
+  max-width: 100%;
+  height: auto;
+  padding-top: 3rem;
+}
+#tribute-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.tribute-list > li {
+  padding-top: 1rem;
+}
+a:link {
+  color: lightblue;
+}
+a:visited {
+  color: pink;
+}
+
+a:hover {
+  color: hotpink;
+}
+footer {
     display: flex;
-    flex-direction: column;
     justify-content: center;
-    align-items: center;
-}
-#image{
-    max-width: 100%;
-    height: auto;
-}
-#tribute-info{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    padding-top: 2rem;
 }
